splash page css

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,31 @@
 /* TODO Add site wide styles */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+
+* {
+  font-family: 'Rubik', sans-serif;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body, ul, div, nav {
+  padding: 0px;
+  margin: 0px;
+}
+
+button{
+  border: none;
+  outline: none;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
