--- a/react-app/src/components/auth/SignupPage.css
+++ b/react-app/src/components/auth/SignupPage.css
@@ -80,6 +80,14 @@
   background-color: #FFFCEB;
 }
 
+
+/* --------Modal start---------------------------------------------- */
+.signup__modal-wrapper {
+}
+
+/* --------Modal end---------------------------------------------- */
+
+
 .splash__container-3 {
   grid-column: 1/3;
   display: flex;
