--- a/react-app/src/components/HomePage/NavBar.css
+++ b/react-app/src/components/HomePage/NavBar.css
@@ -1,13 +1,14 @@
 .nav-wrapper {
   height: 100vh;
-  width: 26.5vw;
-  border: 1px solid red;
+  width: 25vw;
+  border-right: 1px solid lightgray;
+  position: fixed;
 }
 
 #nav__bird-image {
   height: 3em;
   width: 3em;
-  position: absolute;
+  position: fixed;
   top: 10px;
   right: 1350px;
 }
