--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -39,10 +39,173 @@
   border: none;
 }
 
+/* ------all things tweets------------------------------- */
+
 .home__container-3 {
-  border: 1px solid red;
+  /* border: 1px solid blue; */
 }
 
-.one-tweet__container {
-  border: 1px solid red;
+.home-tweet__container {
+  border-bottom: .06em solid rgba(228, 228, 228, 0.986);
+  padding: 12px 0px;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.home-tweet__container:hover {
+  background-color: rgba(250, 250, 250, 0.986);
+}
+
+.home-tweet__profile-container {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#home-tweet__profile-img {
+  height: 4em;
+  width: 4em;
+  border-radius: 50%;
+}
+
+.home-tweet__user-container {
+  grid-column: 3/11;
+  grid-row: 1/2;
+  display: flex;
+  align-items: center;
+}
+
+#home-tweet__full-name {
+  font-weight: 600;
+  letter-spacing: .02em;
+  font-size: 1em;
+}
+
+#home-tweet__username {
+  font-size: .98em;
+  font-weight: 400;
+  padding-left: 10px;
+  color: rgb(116, 116, 116);
+}
+
+.home-tweet__content-container {
+  grid-column: 3/11;
+  grid-row: 2/3;
+
+  display: flex;
+  align-items: center;
+
+  font-size: 1em;
+  letter-spacing: .01em;
+  color: black;
+}
+
+
+
+
+
+
+
+
+.home-tweet__options-container {
+  grid-column: 3/10;
+  grid-row: 3/4;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  color: rgb(116, 116, 116);
+  /* background-color: yellow; */
+}
+
+.home-tweet__option {
+  margin-right: 70px;
+  font-size: 1em;
+  padding: 0px 60px 0px 16px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  /* letter-spacing: 1em; */
+  /* background-color: red; */
+}
+
+.home-tweet__comment:hover {
+  color: #FFE433;
+}
+
+.home-tweet__like:hover {
+  color: rgb(226, 93, 93);
+}
+
+.home-tweet__bookmark:hover {
+  color: #FFE433;
+}
+
+
+
+
+
+#home-tweet__comment-icon {
+  /* border: 1px solid red; */
+  padding: 7px 8px;
+  margin-right: 8px;
+  border-radius: 50%;
+  
+  display: flex;
+  justify-items: center;
+}
+
+#home-tweet__comment-icon:hover {
+  background-color: #fdf7c8ec;
+}
+
+#home-tweet__like-icon {
+  /* border: 1px solid red; */
+  padding: 7px 8px;
+  margin-right: 8px;
+  border-radius: 50%;
+
+  display: flex;
+  justify-items: center;
+}
+
+#home-tweet__like-icon:hover {
+  background-color: rgba(252, 204, 204, 0.795);
+}
+
+#home-tweet__bookmark-icon {
+  /* border: 1px solid red; */
+  padding: 6px 9px;
+  margin-right: 8px;
+  border-radius: 50%;
+
+  display: flex;
+  justify-items: center;
+}
+
+#home-tweet__bookmark-icon:hover {
+  background-color: #fdf7c8ec;
+}
+
+
+
+
+
+
+
+.home-tweet__dropdown-container {
+  grid-column: 12/13;
+  grid-row: 1/2;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
