--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -28,23 +28,89 @@
   font-weight: 700;
 }
 
+/* ------tweet form------------------------------- */
+
 .home__container-2 {
-  padding-top: 4em;
-  border: 1px solid lightgray;
-  background-color: lightyellow;
-  height: 21vh;
+  padding-top: 3.45em;
+  border-bottom: .1px solid rgba(224, 224, 224, 0.637);
+
+  display: grid;
+  height: 11.2em;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+
+  /* background-color: lightyellow; */
+}
+
+.home-profile__container {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* border: 1px solid blue; */
+}
+
+#home-profile__img {
+  height: 3.2em;
+  width: 3.2em;
+  border-radius: 50%;
+}
+
+.home-profile__text-container {
+  grid-column: 3/13;
+  grid-row: 1/3;
+
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  
+  /* border: 1px solid red; */
 }
 
 .home__tweet-textbox {
-  /* border: none; */
-  height: 8em;
-  width: 30em;
-  background-color: lightgray;
+  border: none;
+  outline: none;
+  height: 3.1em;
+  width: 33.4em;
+
+  padding: 10px;
+  font-size: 1.2em;
+  background-color: white;
+
+  /* background-color: lightgray; */
 }
 
-#submit-btn {
-  height: 4em;
-  width: 4em;
+.home-profile__submit-container {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 12px;
+  padding-right: 20px;
+  /* border: 1px solid red; */
+}
+
+#home-profile__submit-btn {
+  margin-bottom: .8em;
+  background-color: #FFDA0A;
+  border-radius: 2em;
+  height: 2.5em;
+  width: 5.3em;
+  
+  color: white;
+  font-size: 1em;
+  font-weight: 600;
+}
+
+#home-profile__submit-btn:hover {
+  background-color: #FFE433;
+}
+
+.home__extra-container {
+  background-color: rgba(245, 245, 245, 0.904);
+  height: .8em;
+  border-bottom: .1px solid rgba(224, 224, 224, 0.637);
 }
 
 /* ------all things tweets------------------------------- */
@@ -76,8 +142,8 @@
 }
 
 #home-tweet__profile-img {
-  height: 4em;
-  width: 4em;
+  height: 3.2em;
+  width: 3.2em;
   border-radius: 50%;
 }
 
