--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -8,19 +8,26 @@
 
 .home__content-wrapper {
   grid-column: 2/4;
+  margin-right: 139px;
+  margin-left: 28px;
+
+  /* border-left: .1px solid red; */
+  /* background-color: pink; */
 }
 
 .home__container-1 {
   position: fixed;
   background-color: white;
-  border-bottom: 1px solid lightgray;
-  border-right: 1px solid lightgray;
-  width: 50vw;
+  border-bottom: .1px solid rgba(224, 224, 224, 0.637);
+  border-right: .1px solid rgba(224, 224, 224, 0.637);
+  width: 38.9vw;
 
   display: flex;
-  padding-left: 20px;
+  padding-left: 16px;
   justify-content: flex-start;
   align-items: center;
+
+  /* background-color: pink; */
 }
 
 #home__header-1 {
@@ -39,6 +46,8 @@
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(4, 1fr);
 
+  margin-right: 4px;
+
   /* background-color: lightyellow; */
 }
 
@@ -49,6 +58,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  padding-right: 18px;
+  padding-top: 7px;
 
   /* border: 1px solid blue; */
 }
@@ -61,12 +73,15 @@
 
 .home-profile__text-container {
   grid-column: 3/13;
-  grid-row: 1/3;
+  grid-row: 1/4;
 
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(3, 1fr);
+
+  margin-right: 4px;
   
+  /* background-color: pink; */
   /* border: 1px solid red; */
 }
 
@@ -74,9 +89,9 @@
   border: none;
   outline: none;
   height: 3.1em;
-  width: 33.4em;
+  width: 25.8em;
 
-  padding: 10px;
+  padding-top: 10px;
   font-size: 1.2em;
   background-color: white;
 
@@ -86,8 +101,8 @@
 .home-profile__submit-container {
   display: flex;
   justify-content: flex-end;
-  padding-top: 12px;
-  padding-right: 20px;
+  padding-top: 15px;
+  padding-right: 18px;
   /* border: 1px solid red; */
 }
 
@@ -95,8 +110,8 @@
   margin-bottom: .8em;
   background-color: #FFDA0A;
   border-radius: 2em;
-  height: 2.5em;
-  width: 5.3em;
+  height: 2.55em;
+  width: 4.7em;
   
   color: white;
   font-size: 1em;
@@ -109,177 +124,16 @@
 
 .home__extra-container {
   background-color: rgba(245, 245, 245, 0.904);
-  height: .8em;
+  height: .7em;
   border-bottom: .1px solid rgba(224, 224, 224, 0.637);
+
+  margin-right: 4px;
 }
 
 /* ------all things tweets------------------------------- */
 
 .home__container-3 {
+  margin-right: 3px;
+
   /* border: 1px solid blue; */
-}
-
-.home-tweet__container {
-  border-bottom: .06em solid rgba(228, 228, 228, 0.986);
-  padding: 12px 0px;
-
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-}
-
-.home-tweet__container:hover {
-  background-color: rgba(250, 250, 250, 0.986);
-}
-
-.home-tweet__profile-container {
-  grid-column: 1/3;
-  grid-row: 1/3;
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#home-tweet__profile-img {
-  height: 3.2em;
-  width: 3.2em;
-  border-radius: 50%;
-}
-
-.home-tweet__user-container {
-  grid-column: 3/11;
-  grid-row: 1/2;
-  display: flex;
-  align-items: center;
-}
-
-#home-tweet__full-name {
-  font-weight: 600;
-  letter-spacing: .02em;
-  font-size: 1em;
-}
-
-#home-tweet__username {
-  font-size: .98em;
-  font-weight: 400;
-  padding-left: 10px;
-  color: rgb(116, 116, 116);
-}
-
-.home-tweet__content-container {
-  grid-column: 3/11;
-  grid-row: 2/3;
-
-  display: flex;
-  align-items: center;
-
-  font-size: 1em;
-  letter-spacing: .01em;
-  color: black;
-}
-
-
-
-
-
-
-
-
-.home-tweet__options-container {
-  grid-column: 3/10;
-  grid-row: 3/4;
-
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-
-  color: rgb(116, 116, 116);
-  /* background-color: yellow; */
-}
-
-.home-tweet__option {
-  margin-right: 70px;
-  font-size: 1em;
-  padding: 0px 60px 0px 16px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  /* letter-spacing: 1em; */
-  /* background-color: red; */
-}
-
-.home-tweet__comment:hover {
-  color: #FFE433;
-}
-
-.home-tweet__like:hover {
-  color: rgb(226, 93, 93);
-}
-
-.home-tweet__bookmark:hover {
-  color: #FFE433;
-}
-
-
-
-
-
-#home-tweet__comment-icon {
-  /* border: 1px solid red; */
-  padding: 7px 8px;
-  margin-right: 8px;
-  border-radius: 50%;
-  
-  display: flex;
-  justify-items: center;
-}
-
-#home-tweet__comment-icon:hover {
-  background-color: #fdf7c8ec;
-}
-
-#home-tweet__like-icon {
-  /* border: 1px solid red; */
-  padding: 7px 8px;
-  margin-right: 8px;
-  border-radius: 50%;
-
-  display: flex;
-  justify-items: center;
-}
-
-#home-tweet__like-icon:hover {
-  background-color: rgba(252, 204, 204, 0.795);
-}
-
-#home-tweet__bookmark-icon {
-  /* border: 1px solid red; */
-  padding: 6px 9px;
-  margin-right: 8px;
-  border-radius: 50%;
-
-  display: flex;
-  justify-items: center;
-}
-
-#home-tweet__bookmark-icon:hover {
-  background-color: #fdf7c8ec;
-}
-
-
-
-
-
-
-
-.home-tweet__dropdown-container {
-  grid-column: 12/13;
-  grid-row: 1/2;
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
