--- a/react-app/src/components/HomePage/Tweet/Tweet.css
+++ b/react-app/src/components/HomePage/Tweet/Tweet.css
@@ -2,6 +2,7 @@
   border-bottom: .06em solid rgba(228, 228, 228, 0.986);
   padding-top: 6px;
   padding-bottom: 6px;
+  position: relative;
 
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -179,19 +180,55 @@
   /* border: 1px solid red; */
 }
 
+#tweet__options-button {
+  background-color: transparent;
+  font-size: 1em;
+}
+
+
 .home-tweet__one-option {
-  position: sticky;
-  top: 160px;
-  right: 600px;
+  position: absolute;
+  /* absolute FROM parent div of 'relative; */
 
-  background-color: yellow;
+  top: 15px;
+  right: 15px;
+  
+  height: 8vh;
+  width: 20vw;
+
+  padding: 5px;
+  border-radius: 5px;
+  background-color: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  /* box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.2); */
+  box-shadow: 2px 2px 10px 3px #cecbcbb7;
+
+  /* border: 1px solid red; */
 }
 
-.hidden {
-  display: none;
-  /* visibility: none; */
+#tweet__delete-button {
+  color: rgb(226, 93, 93);
+  background-color: white;
+  font-size: .9em;
+  letter-spacing: .01em;
+
+  padding-left: 10px;
+  padding-right: 210px;
+  margin: 10px 0px;
+
+  height: 10vh;
+
+  /* border: 1px solid blue; */
 }
 
-.practice {
-  border: 1px solid red;
+.trash-icon {
+  padding-right: 15px;
+}
+
+#tweet__delete-button:hover {
+  background-color: rgba(250, 250, 250, 0.986);
 }
