--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -69,8 +69,10 @@
 
 /* ----Container2--------------------------------------- */
 .profile__container-2 {
-  padding-top: 3.45em;
+  padding-top: 3.4em;
+  padding-bottom: 1em;
   
+  height: 30.3em;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(2, 1fr);
@@ -88,12 +90,28 @@
   width: 37.3em;
 }
 
+
+
+#profile-c2__profile-img {
+  position: absolute;
+  top: 182px;
+  right: 971px;
+
+  height: 8.9em;
+  width: 8.9em;
+  border-radius: 50%;
+  border: 4.7px solid white;
+}
+
 .profile-c2__container2 {
   grid-row: 2/3;
-  padding-left: 14px;
+  padding-left: 18px;
+  padding-top: 3.9em;
 
   /* background-color: yellow; */
 }
+
+
 
 .pc2__name-container {
   /* border: 1px solid blue; */
@@ -102,6 +120,7 @@
 #pc2__name {
   font-size: 1.2em;
   font-weight: 700;
+  padding-bottom: 2px;
 }
 
 #pc2__username {
@@ -113,9 +132,14 @@
 .pc2__info-container {
   display: flex;
   flex-direction: column;
-  padding-top: 10px;
-
+  padding-top: 12px;
   /* background-color: orange; */
+}
+
+#pc2__bio {
+  font-size: .95em;
+  letter-spacing: .01em;
+  font-weight: 400;
 }
 
 .pc2__icon-container {
@@ -125,8 +149,8 @@
   color: rgb(117, 117, 117);
   font-size: .95em;
   font-weight: 400;
-  letter-spacing: .01em;
-  padding: 12px 0px;
+  letter-spacing: .02em;
+  padding: 14px 0px;
 
   /* border: 1px solid green; */
 }
@@ -151,4 +175,35 @@
 .pc2-follower-txt {
   padding-right: 20px;
   color: rgb(117, 117, 117);
+}
+
+/* ----Container3--------------------------------------- */
+.profile__container-3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+
+  /* background-color: lightblue; */
+}
+
+.pc3-link {
+  height: 3.2em;
+  padding: 18px 73.5px 0px 73.5px;
+  font-size: 1em;
+  font-weight: 500;
+  letter-spacing: .02em;
+  color: rgb(117, 117, 117);
+
+  /* background-color: yellow; */
+}
+
+.pc3-link:hover {
+  background-color: rgba(255, 254, 213, 0.877);
+  color: #fcd705;
+  cursor: pointer;
+}
+
+.pc3-link:active {
+  color: #fcd705;
 }
