--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,5 +1,5 @@
 /* TODO Add site wide styles */
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap'); */
 
 * {
   font-family: 'Rubik', sans-serif;
