refactor profile/user store and bookmark store/profile links

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -120,6 +120,7 @@
 
 #home-profile__submit-btn:hover {
   background-color: #FFE433;
+  transition: all 0.2s ease-out;
 }
 
 .home__extra-container {
