add reply redux store done

--- a/react-app/src/components/HomePage/Tweet/OneTweet.css
+++ b/react-app/src/components/HomePage/Tweet/OneTweet.css
@@ -49,3 +49,9 @@
   height: 12.8vh;
   width: 38.89vw;
 }
+
+.single__container-3 {
+  border: 1px solid red;
+  height: 12.8vh;
+  width: 38.89vw;
+}
