--- a/react-app/src/components/HomePage/Tweet/OneTweet.css
+++ b/react-app/src/components/HomePage/Tweet/OneTweet.css
@@ -54,17 +54,74 @@
 
 /* ----Container2--------------------------------------- */
 .single__container-2 {
-  margin-top: 3.1em;
-  height: 32vh;
-  width: 38.89vw;
+  margin-top: 3.3em;
+  /* height: 44vh; */
+  /* width: 38.89vw; */
 
   /* border: 1px solid blue; */
+  /* background-color: blue; */
 }
 
-/* ----Container3--------------------------------------- */
+/* ----Container3 reply box--------------------------------------- */
 .single__container-3 {
-  border: 1px solid green;
-  margin-top: 8em;
-  height: 12.8vh;
+  /* margin-top: 5em; */
+
+  height: 10vh;
   width: 38.89vw;
+  border-bottom: .06em solid rgba(228, 228, 228, 0.986);
+  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+  /* border: 1px solid green; */
+  /* background-color: lightsteelblue; */
+}
+
+#one-tweet__profile-img {
+  height: 3.2em;
+  width: 3.2em;
+  border-radius: 50%;
+
+  margin: 0 1em;
+}
+
+.single-form__flex-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.single__reply-textbox {
+  border: none;
+  outline: none;
+  font-size: 1.3em;
+  height: 2.8em;
+  width: 20em;
+  color: rgb(116, 116, 116);
+  
+  /* background-color: lightskyblue; */
+}
+
+#single__reply-button {
+  background-color: #FFDA0A;
+  border-radius: 2em;
+  height: 2em;
+  width: 4.5em;
+  
+  color: white;
+  font-size: .95em;
+  font-weight: 600;
+  letter-spacing: .03em;
+  padding: 1.3em 2.4em;
+  margin-left: .7em;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#single__reply-button:hover {
+  background-color: #FFE433;
+  transition: all 0.2s ease-out;
 }
