--- a/react-app/src/components/HomePage/Tweet/OneTweet.css
+++ b/react-app/src/components/HomePage/Tweet/OneTweet.css
@@ -10,6 +10,8 @@
   grid-column: 2/4;
   margin-right: 142px;
   margin-left: 28px;
+
+  /* border: 1px solid red; */
 }
 
 /* ----Container1--------------------------------------- */
@@ -55,8 +57,6 @@
 /* ----Container2--------------------------------------- */
 .single__container-2 {
   margin-top: 3.3em;
-  /* height: 44vh; */
-  /* width: 38.89vw; */
 
   /* border: 1px solid blue; */
   /* background-color: blue; */
@@ -64,17 +64,15 @@
 
 /* ----Container3 reply box--------------------------------------- */
 .single__container-3 {
-  /* margin-top: 5em; */
-
   height: 10vh;
   width: 38.89vw;
-  border-bottom: .06em solid rgba(228, 228, 228, 0.986);
   
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  margin-bottom: .1em;
   
-  /* border: 1px solid green; */
   /* background-color: lightsteelblue; */
 }
 
@@ -125,3 +123,14 @@
   background-color: #FFE433;
   transition: all 0.2s ease-out;
 }
+
+/* ----extra container--------------------------------------- */
+.single__extra-container {
+  background-color: rgba(238, 238, 238, 0.904);
+  height: .9em;
+  width: 37.4em;
+  
+  margin-right: 4px;
+}
+
+/* ----Container4 comments--------------------------------------- */
