--- a/react-app/src/components/HomePage/Tweet/BigTweet.css
+++ b/react-app/src/components/HomePage/Tweet/BigTweet.css
@@ -27,6 +27,14 @@
   margin: 15px 11px 6px 1em;
 }
 
+#big-tweet__profile-img:hover {
+  height: 3.2em;
+  width: 3.2em;
+  border-radius: 50%;
+
+  opacity: 0.7;
+}
+
 .bt-c1__flex-container{
   display: flex;
   flex-direction: column;
@@ -97,7 +105,7 @@
   /* border: 1px solid red; */
 }
 
-#tweet__delete-button {
+#bt__delete-button {
   color: rgb(226, 93, 93);
   background-color: white;
   font-size: .9em;
@@ -116,7 +124,7 @@
   padding-right: 15px;
 }
 
-#tweet__delete-button:hover {
+#bt__delete-button:hover {
   background-color: rgba(250, 250, 250, 0.986);
 }
 
@@ -158,6 +166,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: white;
 
   /* background-color: lightgreen; */
 }
@@ -224,14 +233,17 @@
 
 .bt__comment:hover {
   color: #FFE433;
+  cursor: pointer;
 }
 
 .bt__like:hover {
   color: rgb(226, 93, 93);
+  cursor: pointer;
 }
 
 .bt__bookmark:hover {
   color: #FFE433;
+  cursor: pointer;
 }
 
 #bt__comment-icon {
