--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -7,7 +7,8 @@
   display: flex;
   justify-content: center;
   /* align-items: center; */
-  margin-top: 2.5em;
+  /* margin-top: 2.5em; */
+  margin-top: 5.4em;
 }
 
 #modal-background {
