--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -137,7 +137,7 @@
   height: 12.4em;
   width: 39vw;
 
-  margin-bottom: 4.7em;
+  margin-bottom: 4.5em;
 }
 
 #edit-modal__profile-img {
@@ -170,14 +170,17 @@
   padding-bottom: .1em;
 
   font-size: .9em;
+  font-weight: 500;
+  color: #f5d418;
+  letter-spacing: .03;
 }
 
 .edit-modal__textbox {
-  width: 36.5vw;
-  height: 5.5vh;
+  width: 35vw;
+  height: 5.4vh;
 
   padding-left: 1em;
-  margin-bottom: .9em;
+  margin-bottom: 1em;
 
   font-size: .9em;
   font-weight: 400;
