--- a/react-app/src/components/auth/LoginPage.css
+++ b/react-app/src/components/auth/LoginPage.css
@@ -19,8 +19,8 @@
 }
 
 #login__header-1 {
-  font-size: 2.5em;
-  letter-spacing: .03;
+  font-size: 2.2em;
+  margin-right: 2.1em;
 }
 
 .login__container-1 {
