--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -8,7 +8,8 @@
   justify-content: center;
   /* align-items: center; */
   /* margin-top: 2.5em; */
-  margin-top: 5.4em;
+  /* margin-top: 5.4em; */
+  margin-top: 4em;
 }
 
 #modal-background {
