--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -99,6 +99,29 @@
   /* background-color: lightgray; */
 }
 
+
+/* -----------IMAGE UPLOAD---------------------------------- */
+#tweet-image__container {
+  /* border: orange solid 1px; */
+  
+  /* height: 3em; */
+
+  /* display: flex; */
+  /* justify-content: flex-start; */
+  /* align-items: flex-end; */
+  
+  /* grid-column: 1/6; */
+  /* grid-row: 3/4; */
+}
+
+.home__tweet-image {
+  color: gray;
+
+  /* background-color: pink; */
+}
+/* -----------IMAGE UPLOAD---------------------------------- */
+
+
 .home-profile__submit-container {
   display: flex;
   justify-content: flex-end;
